--- a/Client/MCClient/GamesControl/FinishPlayerControl.xaml
+++ b/Client/MCClient/GamesControl/FinishPlayerControl.xaml
@@ -15,9 +15,15 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Label HorizontalAlignment="Left" VerticalContentAlignment="Center">
-                <TextBlock FontSize="13"> Thời gian</TextBlock>
+                <TextBlock FontSize="13">Mức điểm</TextBlock>
             </Label>
-            <Label HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="100,0,0,0">
+            <Label HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="80,0,0,0">
+                <TextBlock x:Name="txtHard" FontSize="18">0</TextBlock>
+            </Label>
+            <Label HorizontalAlignment="Right" VerticalContentAlignment="Center">
+                <TextBlock FontSize="13">Thời gian</TextBlock>
+            </Label>
+            <Label HorizontalAlignment="Right" VerticalContentAlignment="Center" Margin="0,0,70,0">
                 <TextBlock x:Name="txtTime" FontSize="18">0</TextBlock>
             </Label>
         </Grid>
