--- a/Server/HostServer/Components/PointsEditor.xaml
+++ b/Server/HostServer/Components/PointsEditor.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Server.HostServer.Components.GeneralControl"
+﻿<UserControl x:Class="Server.HostServer.Components.PointsEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
