--- a/Server/HostServer/Components/PointsControl.xaml
+++ b/Server/HostServer/Components/PointsControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Server.HostServer.Components"
              mc:Ignorable="d" 
-             Height="100" d:DesignWidth="800">
+             d:DesignHeight="100" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
