--- a/Server/HostServer/ServerWindow.xaml
+++ b/Server/HostServer/ServerWindow.xaml
@@ -27,6 +27,9 @@
             <TabItem x:Name="tabFinish" Header="Về đích">
                 <Grid x:Name="gridFinish"/>
             </TabItem>
+            <TabItem x:Name="tabTie" Header="Câu hỏi phụ">
+                <Grid x:Name="gridTie"/>
+            </TabItem>
         </TabControl>
         <Label x:Name="lblIP" Content="IP: " HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblPort" Content="Cổng: " HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top"/>
