--- a/Client/Viewer/GamesControl/StartViewerControl.xaml
+++ b/Client/Viewer/GamesControl/StartViewerControl.xaml
@@ -16,6 +16,6 @@
         <MediaElement x:Name="mediaDone" LoadedBehavior="Manual"/>
         -->
         <compo:QNPBox x:Name="qnpBox"/>
-        <MediaElement x:Name="media" LoadedBehavior="Manual" HorizontalAlignment="Left" Height="130" Margin="927,478,0,0" VerticalAlignment="Top" Width="250" ScrubbingEnabled="True" Loaded="media_Loaded"/>
+        <MediaElement x:Name="media" LoadedBehavior="Manual" HorizontalAlignment="Left" Height="130" Margin="927,478,0,0" VerticalAlignment="Top" Width="250" ScrubbingEnabled="True" MediaOpened="media_Opened"/>
     </Grid>
 </UserControl>
