--- a/Client/Viewer/GamesControl/PlainControl.xaml
+++ b/Client/Viewer/GamesControl/PlainControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.Viewer.GamesControl"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="Cyan">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <MediaElement x:Name="media" LoadedBehavior="Manual"/>
     </Grid>
