--- a/Client/Viewer/GamesControl/AnswerViewerControl.xaml
+++ b/Client/Viewer/GamesControl/AnswerViewerControl.xaml
@@ -7,6 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="900" d:DesignWidth="1600">
     <Grid>
+        <!--
+        <Grid.Background>
+            <ImageBrush ImageSource="D:\SimpO_DoHoa\Resource\Background_Answer.png"/>
+        </Grid.Background>
+        -->
         <Grid.Resources>
             <Style TargetType="Label">
                 <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -16,22 +21,26 @@
         <MediaElement x:Name="mediaCorrect" LoadedBehavior="Manual"/>
         <MediaElement x:Name="mediaWrong" LoadedBehavior="Manual"/>
         <MediaElement x:Name="media" LoadedBehavior="Manual" MediaEnded="media_MediaEnded"/>
+        <Image x:Name="imgW1" Source="..\..\Resources\Effects\Wrong1.png" Visibility="Hidden"/>
+        <Image x:Name="imgW2" Source="..\..\Resources\Effects\Wrong2.png" Visibility="Hidden"/>
+        <Image x:Name="imgW3" Source="..\..\Resources\Effects\Wrong3.png" Visibility="Hidden"/>
+        <Image x:Name="imgW4" Source="..\..\Resources\Effects\Wrong4.png" Visibility="Hidden"/>
         <Grid x:Name="gridAnswer">
-            <Label x:Name="lblName1" Content="{Binding Path=names[0]}" HorizontalAlignment="Left" Height="36" Margin="497,109,0,0" VerticalAlignment="Top" Width="172" FontWeight="Bold" FontSize="18" Foreground="#FF945414"/>
-            <Label x:Name="lblTime1" Content="{Binding Path=times[0]}" HorizontalAlignment="Left" Height="88" Margin="962,141,0,0" VerticalAlignment="Top" Width="186" FontWeight="Bold" FontSize="48" Foreground="#FFB7691B"/>
-            <Label x:Name="lblAnswer1" Content="{Binding Path=answers[0]}" HorizontalAlignment="Left" Height="88" Margin="466,141,0,0" VerticalAlignment="Top" Width="486" FontWeight="Bold" FontSize="36" Foreground="White"/>
-            
-            <Label x:Name="lblName2" Content="{Binding Path=names[1]}" HorizontalAlignment="Left" Height="36" Margin="497,283,0,0" VerticalAlignment="Top" Width="172" FontWeight="Bold" FontSize="18" Foreground="#FF945414"/>
-            <Label x:Name="lblTime2" Content="{Binding Path=times[1]}" HorizontalAlignment="Left" Height="88" Margin="962,315,0,0" VerticalAlignment="Top" Width="186" FontWeight="Bold" FontSize="48" Foreground="#FFB7691B"/>
-            <Label x:Name="lblAnswer2" Content="{Binding Path=answers[1]}" HorizontalAlignment="Left" Height="88" Margin="466,315,0,0" VerticalAlignment="Top" Width="486" FontWeight="Bold" FontSize="36" Foreground="White"/>
-            
-            <Label x:Name="lblName3" Content="{Binding Path=names[2]}" HorizontalAlignment="Left" Height="36" Margin="497,441,0,0" VerticalAlignment="Top" Width="172" FontWeight="Bold" FontSize="18" Foreground="#FF945414"/>
-            <Label x:Name="lblTime3" Content="{Binding Path=times[2]}" HorizontalAlignment="Left" Height="88" Margin="962,473,0,0" VerticalAlignment="Top" Width="186" FontWeight="Bold" FontSize="48" Foreground="#FFB7691B"/>
-            <Label x:Name="lblAnswer3" Content="{Binding Path=answers[2]}" HorizontalAlignment="Left" Height="88" Margin="466,473,0,0" VerticalAlignment="Top" Width="486" FontWeight="Bold" FontSize="36" Foreground="White"/>
-            
-            <Label x:Name="lblName4" Content="{Binding Path=names[3]}" HorizontalAlignment="Left" Height="36" Margin="497,598,0,0" VerticalAlignment="Top" Width="172" FontWeight="Bold" FontSize="18" Foreground="#FF945414"/>
-            <Label x:Name="lblTime4" Content="{Binding Path=times[3]}" HorizontalAlignment="Left" Height="88" Margin="962,630,0,0" VerticalAlignment="Top" Width="186" FontWeight="Bold" FontSize="48" Foreground="#FFB7691B"/>
-            <Label x:Name="lblAnswer4" Content="{Binding Path=answers[3]}" HorizontalAlignment="Left" Height="88" Margin="466,630,0,0" VerticalAlignment="Top" Width="486" FontWeight="Bold" FontSize="36" Foreground="White"/>
+            <Label x:Name="lblName1" Content="{Binding Path=names[0]}" HorizontalAlignment="Left" Height="36" Margin="330,85,0,0" VerticalAlignment="Top" Width="240" FontWeight="Bold" FontSize="18" Foreground="#FF945414"/>
+            <Label x:Name="lblTime1" Content="{Binding Path=times[0]}" HorizontalAlignment="Left" Height="104" Margin="1093,121,0,0" VerticalAlignment="Top" Width="152" FontWeight="Bold" FontSize="48" Foreground="Black"/>
+            <Label x:Name="lblAnswer1" Content="{Binding Path=answers[0]}" HorizontalAlignment="Left" Height="104" Margin="295,121,0,0" VerticalAlignment="Top" Width="796" FontWeight="Bold" FontSize="36" Foreground="Black"/>
+
+            <Label x:Name="lblName2" Content="{Binding Path=names[1]}" HorizontalAlignment="Left" Height="36" Margin="387,275,0,0" VerticalAlignment="Top" Width="242" FontWeight="Bold" FontSize="18" Foreground="#FF945414"/>
+            <Label x:Name="lblTime2" Content="{Binding Path=times[1]}" HorizontalAlignment="Left" Height="104" Margin="1151,311,0,0" VerticalAlignment="Top" Width="152" FontWeight="Bold" FontSize="48" Foreground="Black"/>
+            <Label x:Name="lblAnswer2" Content="{Binding Path=answers[1]}" HorizontalAlignment="Left" Height="104" Margin="353,311,0,0" VerticalAlignment="Top" Width="798" FontWeight="Bold" FontSize="36" Foreground="Black"/>
+
+            <Label x:Name="lblName3" Content="{Binding Path=names[2]}" HorizontalAlignment="Left" Height="36" Margin="447,467,0,0" VerticalAlignment="Top" Width="241" FontWeight="Bold" FontSize="18" Foreground="#FF945414"/>
+            <Label x:Name="lblTime3" Content="{Binding Path=times[2]}" HorizontalAlignment="Left" Height="104" Margin="1212,502,0,0" VerticalAlignment="Top" Width="151" FontWeight="Bold" FontSize="48" Foreground="Black"/>
+            <Label x:Name="lblAnswer3" Content="{Binding Path=answers[2]}" HorizontalAlignment="Left" Height="104" Margin="414,502,0,0" VerticalAlignment="Top" Width="793" FontWeight="Bold" FontSize="36" Foreground="Black"/>
+
+            <Label x:Name="lblName4" Content="{Binding Path=names[3]}" HorizontalAlignment="Left" Height="36" Margin="503,657,0,0" VerticalAlignment="Top" Width="242" FontWeight="Bold" FontSize="18" Foreground="#FF945414"/>
+            <Label x:Name="lblTime4" Content="{Binding Path=times[3]}" HorizontalAlignment="Left" Height="105" Margin="1267,692,0,0" VerticalAlignment="Top" Width="153" FontWeight="Bold" FontSize="48" Foreground="Black"/>
+            <Label x:Name="lblAnswer4" Content="{Binding Path=answers[3]}" HorizontalAlignment="Left" Height="105" Margin="470,692,0,0" VerticalAlignment="Top" Width="797" FontWeight="Bold" FontSize="36" Foreground="Black"/>
         </Grid>
     </Grid>
 </UserControl>
