--- a/Client/Viewer/GamesControl/PointsViewerControl.xaml
+++ b/Client/Viewer/GamesControl/PointsViewerControl.xaml
@@ -8,12 +8,11 @@
              d:DesignHeight="900" d:DesignWidth="1600">
     <Grid>
         <MediaElement x:Name="mediaPoint" Source="../../Resources/Effects/PlayerPoints.mp4" LoadedBehavior="Manual"/>
-        <MediaElement Source="../../Resources/Effects/PlayerPoints.mp4"/>
-        <Label x:Name="lblPoint" Content="360" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="100" Margin="301,611,0,0" VerticalAlignment="Top" Width="144" Foreground="Black" FontWeight="Bold" FontSize="60"/>
+        <Label x:Name="lblPoint" Content="360" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="115" Margin="301,600,0,0" VerticalAlignment="Top" Width="168" Foreground="Black" FontWeight="Bold" FontSize="72"/>
         <Label x:Name="lblName" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="145" Margin="272,681,0,0" VerticalAlignment="Top" Width="733" Foreground="White" FontWeight="Bold" FontSize="57"/>
-        <Label x:Name="lblName_Copy" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="49" Margin="1195,554,0,0" VerticalAlignment="Top" Width="294" Foreground="White" FontWeight="Bold" FontSize="24"/>
-        <Label x:Name="lblName_Copy1" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="49" Margin="1195,488,0,0" VerticalAlignment="Top" Width="294" Foreground="White" FontWeight="Bold" FontSize="24"/>
-        <Label x:Name="lblName_Copy2" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="49" Margin="1195,421,0,0" VerticalAlignment="Top" Width="294" Foreground="White" FontWeight="Bold" FontSize="24"/>
-        <Label x:Name="lblName_Copy3" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="49" Margin="1195,355,0,0" VerticalAlignment="Top" Width="294" Foreground="White" FontWeight="Bold" FontSize="24"/>
+        <Label x:Name="lblP1" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="49" Margin="1195,554,0,0" VerticalAlignment="Top" Width="294" Foreground="White" FontWeight="Bold" FontSize="24"/>
+        <Label x:Name="lblP2" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="49" Margin="1195,488,0,0" VerticalAlignment="Top" Width="294" Foreground="White" FontWeight="Bold" FontSize="24"/>
+        <Label x:Name="lblP3" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="49" Margin="1195,421,0,0" VerticalAlignment="Top" Width="294" Foreground="White" FontWeight="Bold" FontSize="24"/>
+        <Label x:Name="lblP4" Content="Tạch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="49" Margin="1195,355,0,0" VerticalAlignment="Top" Width="294" Foreground="White" FontWeight="Bold" FontSize="24"/>
     </Grid>
 </UserControl>
